Small corrections: modal header, cart collapse total no-wrap

--- a/assets/css/store/_checkout.scss
+++ b/assets/css/store/_checkout.scss
@@ -49,7 +49,7 @@ $checkout-shopi-right-bg:               $gray-50 !default;
 $checkout-shopi-body-padding-x:         15px !default;
 $checkout-shopi-body-width:             $checkout-shopi-container-width !default;
 
-$checkout-shopi-collapse-header-bg:             $gray-100 !default;
+$checkout-shopi-collapse-header-bg:             $gray-50 !default;
 $checkout-shopi-collapse-header-border-width:   $border-width !default;
 $checkout-shopi-collapse-header-border-color:   $gray-300 !default;
 $checkout-shopi-collapse-body-bg:               $checkout-shopi-right-bg !default;
@@ -319,7 +319,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: $font-weight-bold;
     margin-bottom: 0;
     text-transform: uppercase;
-    letter-spacing: 0.1em;
+    letter-spacing: $letter-spacing;
   }
 }
 
